[Change] Begin v1.8.8 Development